--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
         sudo apt-get install -y texlive-latex-extra
         sudo apt-get install -y texlive-xetex
         sudo apt-get install -y texlive-fonts-recommended
+        sudo apt-get install -y texlive-fonts-extra
         sudo apt-get install -y texlive-bibtex-extra
         sudo apt-get install -y texlive-binaries
         sudo apt-get install -y ttf-mscorefonts-installer
